--- a/views/reserve_form.erb
+++ b/views/reserve_form.erb
@@ -47,10 +47,10 @@
 			<br/>
 			<label for = "type">Select Room</label>
 			<select name = "type">
-					<option value="single">Single Room</option>
-					<option value="double">Double Room</option>
-					<option value="twin">Twin Room</option>
-					<option value="twind">Twin Double Room</option>
+					<option value="single room">Single Room</option>
+					<option value="double room">Double Room</option>
+					<option value="twin room">Twin Room</option>
+					<option value="twin double room">Twin Double Room</option>
 					<option value="suite">Suite</option>
 			</select>
 			<br/>
