--- a/views/rooms.erb
+++ b/views/rooms.erb
@@ -43,7 +43,7 @@
 	<br/><br/>
 	
 	<font face = georgia><h3>TWIN ROOM</h3></font>
-	<h4>The good thing about twin rooms is that you have enough space and if want a larger bed, sticking the two together will do!</h4>
+	<h4>The good thing about twin rooms is that you have enough space and if you want a larger bed, sticking the two together will do!</h4>
 	<img src = "twinroom.jpg">
 	<br/><br/>
 	
